--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ install:
   - pip install -q diff-match-patch --use-mirrors
   - pip install -q -e . --use-mirrors
 script:
-  - python setup.py test
+  - python quicktest.py btlib
