--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,10 @@ python:
   - "2.6"
   - "2.7"
 env:
-  - DJANGO=1.5.1
+  - DJANGO_VERSION=Django==1.5.1
 install:
-  - pip install -q PIL --use-mirrors
-  - pip install -q Django==$DJANGO --use-mirrors
-  - pip install -q Markdown --use-mirrors
-  - pip install -q diff-match-patch --use-mirrors
+  - pip install -q --use-mirrors $DJANGO_VERSION
+  - pip install -q --use-mirrors -r requirements.txt
   - pip install -q -e . --use-mirrors
 script:
   - python quicktest.py btlib
