--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,24 @@
 language: python
 python:
+  - "2.6"
   - "2.7"
 env:
-  - DJANGO_VERSION=Django==1.6.1
+  - DJANGO_VERSION=1.6.1
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq python-dev python-setuptools
+  - sudo apt-get install -qq libtiff4-dev libjpeg62-dev zlib1g-dev libfreetype6-dev liblcms1-dev tcl8.5-dev tk8.5-dev
 install:
-  - pip install coveralls --use-mirrors
-  - pip install -q --use-mirrors -r requirements.txt
-  - pip install -q -e . --use-mirrors
+  - "pip install coveralls --use-mirrors"
+  - "pip install --use-mirrors -r requirements.txt"
+  - "pip install -e . --use-mirrors"
 script:
   - coverage run --source=btlib quicktest.py btlib
   - coverage report -m
   - python quicktest.py btlib
+branches:
+  only:
+    - master
+    - devel
 after_script:
   - coveralls --verbose
