--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ python:
 env:
   - DJANGO_VERSION=1.6.1
 install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq python-dev python-setuptools
-  - sudo apt-get install -qq libtiff4-dev libjpeg62-dev zlib1g-dev libfreetype6-dev liblcms1-dev tcl8.5-dev tk8.5-dev
+  - "sudo apt-get update -qq"
+  - "sudo apt-get install -qq python-dev python-setuptools"
+  - "sudo apt-get install -qq libtiff4-dev libjpeg62-dev zlib1g-dev libfreetype6-dev liblcms1-dev tcl8.5-dev tk8.5-dev"
   - "pip install coveralls --use-mirrors"
   - "pip install --use-mirrors -r requirements.txt"
   - "pip install -e . --use-mirrors"
